fix social icons not showing in row due to mobile reponsiveness mistake

--- a/src/containers/feedback/Feedback.css
+++ b/src/containers/feedback/Feedback.css
@@ -47,6 +47,12 @@
     flex-wrap: wrap;
 }
 
+.feedback-social div {
+  flex: 1 1 25%;
+  min-width: 25%;
+  box-sizing: border-box;
+}
+
 .feedback-social img {
     margin-bottom: 35px;
 }
